syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcService";

service AdministrativeService {
    rpc AddRide (RideRequest) returns (RideResponse);
    rpc DeleteRide (RideRequest) returns (RideResponse);
    rpc UpdateRide (RideRequest) returns (RideResponse);
    rpc GetRideRatings (RideRequest) returns (RideRatingsResponse);
    rpc StreamRides (StreamRidesRequest) returns (stream Ride);
    rpc GetNextRides (RidesRequest) returns (RidesResponse);
    rpc GetAllRides (google.protobuf.Empty) returns (RidesResponse);
    rpc GetAllUsers (google.protobuf.Empty) returns (UsersResponse);
}

message RideRequest {
    string rideId = 1;
    string driverId = 2;
    bool published = 3;
    repeated string passengers = 4;
    int32 initialLocation = 5;
    int32 endingLocation = 6;
    string departureTime = 7;
    int32 availableSeats = 8;
    double pricePerPerson = 9;
    bool petsAllowed = 10;
    string vehicleId = 11;
}

message RideResponse {
    string status = 1;
}

message RideRatingsResponse {
    repeated Rating ratings = 1;
}

message Rating {
    string id = 1;
    double punctuation = 2;
    string comment = 3;
}

message StreamRidesRequest {
    int32 count = 1;
}

message Ride {
    string rideId = 1;
    string driverId = 2;
    bool published = 3;
    repeated string passengers = 4;
    int32 initialLocation = 5;
    int32 endingLocation = 6;
    string departureTime = 7;
    int32 availableSeats = 8;
    double pricePerPerson = 9;
    bool petsAllowed = 10;
    string vehicleId = 11;
}

message RidesRequest {
    int32 count = 1;
}

message RidesResponse {
    repeated Ride rides = 1;
}

message User {
    string id = 1;
    string ci = 2;
    string username = 3;
}

message UsersResponse {
    repeated User users = 1;
}
